tests/linearity-regression/accept/accept_06.pdx
module M06 = structure {
  let x = 6
  let y = 7
}
