tests/linearity-regression/reject/s0906_branch_mismatch_02.pdx
module M = structure {
  let x = 1
}
